# tsaf-parser

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TSAF.md  copy.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-actions.yaml  chores.yaml  codeql-analysis.yaml  test.yml
src/djay_tsaf_parser/: __init__.py  apple_id_extractor.py  lib_tsaf_parser.py  parser.py  tsaf.py
tests/: conftest.py  test_apple_id_extractor.py  test_lib_tsaf_parser.py  test_parser.py  test_parser_dynamic.py  test_tsaf.py
