[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djay-tsaf-parser"
version = "0.1.0"
description = "DJAY TSAF Parser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.hatch.build.targets.wheel]
packages = ["src/djay_tsaf_parser"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
]
